--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -164,11 +164,10 @@ Purchase: http://themeforest.net/user/kamleshyadav
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="rock_footer_logo"> <img src="images/LogoMain.png" alt="footer logo" /> </div>
         <h3>Location</h3>
-        <p>PO Box 16122 Collins Street West Victoria 8007 Australia</p>
+        <p>2847 Buford Highway Atlanta, GA 30329</p>
         <h3>Opening Hours</h3>
-        <p> MON - FRI  9 AM TO 10 PM</p>
-        <h3>Happy Hours</h3>
-        <p> MON - FRI  2 PM TO 06 PM</p>
+        <p> WED - FRI  9 PM TO 3 AM</p>
+        
       </div>
       
   </div>
@@ -191,17 +190,14 @@ Purchase: http://themeforest.net/user/kamleshyadav
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-12">
-          <p>Stay Connected With Us Rockon</p>
+          <p>Stay Connected With Us Royal Lounge</p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="rock_social">
             <ul>
-              <li><a href=""><i class="fa fa-facebook"></i></a></li>
-              <li><a href=""><i class="fa fa-twitter"></i></a></li>
-              <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-              <li><a href=""><i class="fa fa-skype"></i></a></li>
-              <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-              <li><a href=""><i class="fa fa-pinterest"></i></a></li>
+              <li><a href="https://www.facebook.com/royalloungeatlanta/"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/royalloungeatl"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://instagram.com/royalloungeatl/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
